--- a/resources/assets/scss/pages/_pages-section.scss
+++ b/resources/assets/scss/pages/_pages-section.scss
@@ -4,6 +4,9 @@
         .footer__wrapper {
             background: #f8f6f6;
         }
+        .main-content {
+            padding-bottom: 0 !important;
+        }
     }
     .dashboard-nav {
         margin-bottom: 50px;
