--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -170,6 +170,10 @@ header {
             position: absolute;
             left: 115px;
             height: 50px;
+            a {
+                color: $color-white;
+                text-decoration: none;
+            }
         }
         .info {
             position: relative;
