--- a/resources/assets/scss/components/_mobile-menu.scss
+++ b/resources/assets/scss/components/_mobile-menu.scss
@@ -50,6 +50,20 @@ $mobile-font:arial;
 .main-nagivation-mobile {
     display: none;
     width: 100%;
+    ul.contact-icons {
+        display: flex;
+        border: 0;
+        position: absolute !important;
+        top: 0 !important;
+        width: 120px !important;
+        li {
+            width: calc(100%/2);
+            a {
+                font-size: 20px !important;
+                border: 0 !important;
+            }
+        }
+    }
     .mobile-logo {
         position: absolute;
         width: 265px;
@@ -70,6 +84,22 @@ $mobile-font:arial;
                 height: 100%;
                 width: auto;
             }
+        }
+    }
+    .login-option {
+        position: absolute;
+        height: 30px;
+        width: 30px;
+        right: 20px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        @include flex;
+        @include flex-align-items(center);
+        @include flex-justify-content(center);
+        i {
+            font-size: 21px;
+            color: #000;
         }
     }
 }
@@ -125,6 +155,7 @@ $mobile-font:arial;
                     overflow-y: scroll;
                     -webkit-box-shadow: 2px 0 5px 1px rgba(0, 0, 0, .2);
                     box-shadow: 2px 0 5px 1px rgba(0, 0, 0, .2);
+                    padding-top: 45px;
                     ul {
                         position: relative;
                         width: 100%;
@@ -142,9 +173,10 @@ $mobile-font:arial;
                                 border-bottom: 1px solid $mobile-global-color;
                                 padding-bottom: 10px;
                             }
-                            a {
-                                padding: 10px 0 !important;
+                            >a {
+                                padding: 5px 0 !important;
                                 border-bottom: 1px solid $mobile-border-color;
+                                font-weight: bold !important;
                             }
                             &.nav-item {
                                 position: relative;
@@ -233,6 +265,14 @@ $mobile-font:arial;
                             &.active {
                                 >a {
                                     font-weight: bold;
+                                }
+                            }
+                            .sub-menu.no-mega-sub {
+                                li {
+                                    a {
+                                        border: 0;
+                                        padding: 5px 0 !important;
+                                    }
                                 }
                             }
                         }
