--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -43,7 +43,7 @@
         align-items: center;
     }
     .banner__image-slide .item-left .banner-content-desc {
-        top: inherit;
+        top: inherit !important;
     }
     .banner__image-slide .item-left {
         position: relative;
