--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -78,6 +78,84 @@
     }
 }
 
+@media only screen and (max-width:1300px) {
+    section.partnership .title h2 {
+        color: #fff;
+        font-size: 2.7em;
+    }
+    section.partnership .title span {
+        font-size: 1em !important;
+    }
+    section.partnership .partnership-level--item .icon {
+        margin-right: 10px !important;
+    }
+    section.partnership .partnership-level__adjustment .content-txt {
+        width: 65%;
+    }
+    header .contact-details-wrap .title {
+        left: 0;
+    }
+    section.events-camp .events-camp-slider {
+        left: 0;
+    }
+    section.events-camp .events-camp-slider--item a .title {
+        padding: 5px;
+        font-size: 1.1em !important;
+    }
+    section.events-camp .events-camp-slider--item a .title {
+        padding: 5px;
+        font-size: 1.1em !important;
+        padding-right: 20px;
+        min-height: 60px;
+        padding-right: 55px;
+    }
+    section.events-camp .events-camp-slider--item a .title span {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+    section.events-camp .events-camp-slider .slick-dots {
+        left: 0;
+        right: 0;
+    }
+    section.events-camp .events-camp-slider .slick-next {
+        right: 1%;
+    }
+    section.events-camp .events-camp-slider .slick-prev {
+        left: 1%;
+    }
+    section.events-camp .container-max {
+        max-width: 95% !important;
+    }
+    .btn-wrap a,
+    .become-member__button a {
+        margin-bottom: 10px;
+        width: 100%;
+    }
+    section.events-camp {
+        max-width: 100%;
+        padding-top: 70px;
+        min-height: auto;
+        padding-bottom: 2%;
+    }
+    .partnership__left {
+        padding-left: 2%;
+    }
+}
+
+@media only screen and (max-width:1100px) {
+    section h2 {
+        font-size: 2.7em;
+    }
+    section.become-member .content-text {
+        width: 100%;
+        margin: 0;
+    }
+}
+
 @media only screen and (max-width:1024px) {
     header {
         min-height: 75px;
