--- a/resources/assets/scss/components/_mobile-overwrite.scss
+++ b/resources/assets/scss/components/_mobile-overwrite.scss
@@ -144,6 +144,30 @@
     .partnership__left {
         padding-left: 2%;
     }
+    section.chapters .btn-wrap {
+        position: inherit;
+        left: 0;
+        bottom: 0;
+        top: inherit;
+    }
+    section.chapters .map-content {
+        position: inherit;
+        height: auto !important;
+        left: inherit;
+        min-height: inherit;
+        padding: 0 !important;
+    }
+    section.partnership::after {
+        display: none;
+    }
+    .big-advertisement {
+        max-width: 80%;
+        width: 80%;
+        height: auto;
+    }
+    .big-advertisement img {
+        width: 100%;
+    }
 }
 
 @media only screen and (max-width:1100px) {
@@ -153,6 +177,13 @@
     section.become-member .content-text {
         width: 100%;
         margin: 0;
+    }
+    section .sponsors .sponsor-logo {
+        position: inherit;
+        width: 100%;
+        border-radius: 0;
+        margin: 0;
+        top: inherit;
     }
 }
 
