--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2214,6 +2214,12 @@
                 max-width: 1280px;
             }
         }
+        &__memberdirectory-detail {
+            margin-top: 50px;
+            .container-max {
+                max-width: 1280px;
+            }
+        }
     }
     
     .member-directory-result {
@@ -2292,6 +2298,113 @@
             margin-bottom: 15px;
             .member-directory-result__name {
                 padding: 10px 20px;
+            }
+        }
+    }
+    
+    .pagination-section {
+        display: inline-block;
+        margin-top: 25px;
+        .pagination {
+            .page-link {
+                border: 0;
+                color: $color-black;
+                background: transparent;
+            }
+            .page-item {
+                &.active {
+                    .page-link {
+                        background-color: $color-secondary;
+                        border-color: $color-secondary;
+                        color: $color-white;
+                        @include border-radius(100%);
+                        width: 35px;
+                        height: 35px;
+                    }
+                }
+                &.disabled {
+                    .page-link {
+                        color: $color-gray;
+                    }
+                }
+            }
+        }
+    }
+    
+    .memberdirectory-detail {
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        margin-bottom: 50px;
+        padding: 30px;
+        .container {
+            max-width: 100%;
+        }
+        &__image {
+            height: 260px;
+            width: 260px;
+            border-ra: 100%;
+            overflow: hidden;
+            border-radius: 100%;
+            margin-bottom: 20px;
+        }
+        &__badge {
+            img {
+                margin-bottom: 25px;
+            }
+        }
+        &__badge-year {
+            display: inline-block;
+            background: $sprite-all;
+            background-position: -565px -399px;
+            width: 112px;
+            height: 36px;
+            display: flex;
+            margin: auto;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            margin-bottom: 20px;
+        }
+        &__social-link {
+            border-top: 1px solid #000;
+            padding-top: 10px;
+            text-align: center;
+            h5 {
+                font-weight: bold;
+            }
+            .socials {
+                a {
+                    color: $color-dark;
+                    margin-right: 10px;
+                    &:hover {
+                        color: $color-secondary;
+                    }
+                }
+            }
+        }
+        &__date {
+            font-weight: 400;
+        }
+        &__title {
+            margin-top: 20px;
+            h3 {
+                font-weight: 800;
+                margin-bottom: 0;
+                color: $color-dark;
+            }
+        }
+        &__position {
+            text-transform: uppercase;
+            color: $color-dark;
+            margin-bottom: 25px;
+        }
+    }
+    
+    .information {
+        margin-top: 30px;
+        .row {
+            >div {
+                margin-bottom: 14px;
             }
         }
     }
