replaced login on mainpage.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21846,6 +21846,10 @@ ul.bullet-style li h6 {
   margin-bottom: 14px;
 }
 
+.login-section-main {
+  margin-top: 50px;
+}
+
 section.page {
   overflow: hidden;
 }
