--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -637,6 +637,7 @@ img {
 }
 
 .login-section {
+    margin-top: 50px;
     margin-bottom: 50px;
     .container-max {
         border-radius: 10px !important;
