--- a/resources/assets/scss/components/_subpages.scss
+++ b/resources/assets/scss/components/_subpages.scss
@@ -32,6 +32,9 @@ section {
             .sub-banner {
                 height: 310px;
             }
+            .events-section {
+                margin-bottom: 50px !important;
+            }
         }
         &--login {
             .site-content {
