--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -117,6 +117,11 @@ header {
                             }
                         }
                     }
+                    &:last-child {
+                        .dropdown-menu {
+                            left: -70px;
+                        }
+                    }
                 }
             }
             .mega-menu {
