--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -2417,3 +2417,9 @@
             }
         }
     }
+    
+    .registration-login-steps {
+        form {
+            width: 100%;
+        }
+    }
