--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22424,9 +22424,39 @@ section.page--media .search-member-directory {
   display: block;
   margin: 0;
 }
-.navigation-icon__item:hover .navigation-icon__watermark {
+.navigation-icon__item--imagehover:hover .navigation-icon__watermark {
   opacity: 1;
   visibility: visible;
+}
+.navigation-icon__item:hover .navigation-icon__hover {
+  opacity: 1;
+  visibility: visible;
+}
+.navigation-icon__hover {
+  background: #303132;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
+}
+.navigation-icon__hover a {
+  text-decoration: none;
+}
+.navigation-icon__hover a:hover h3 {
+  color: #ab1a2d;
+}
+.navigation-icon__hover h3 {
+  font-size: 1.3em;
+  font-weight: bold;
+  color: #fff;
 }
 .navigation-icon__watermark {
   position: absolute;
@@ -22832,6 +22862,47 @@ section.page--media .search-member-directory {
 }
 .photo-modal__title h3 {
   font-weight: bold !important;
+}
+
+.membership-card-modal .modal-dialog {
+  /* width: 70%; */
+  max-width: 70%;
+  border-radius: 0;
+}
+.membership-card-modal .modal-dialog * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.membership-card-modal .modal-dialog .modal-body .container {
+  padding: 0;
+  width: 100%;
+  margin: 0;
+  max-width: 100%;
+}
+.membership-card-modal .modal-dialog .modal-body img {
+  width: 100%;
+}
+.membership-card-modal .modal-dialog .modal-content {
+  border-radius: 0;
+}
+.membership-card-modal .modal-dialog button.close {
+  position: absolute;
+  background: #ab1a2d;
+  right: 0 !important;
+  top: 0;
+  padding: 5px 10px !important;
+  margin: 0 !important;
+  color: #fff;
+  border-radius: 0;
+  z-index: 9;
+  opacity: 1;
+}
+.membership-card-modal .modal-dialog .modal-header {
+  padding: 2px 15px !important;
+}
+.membership-card-modal .modal-dialog .modal-header h5 {
+  font-weight: bold;
 }
 
 .steps-wizard {
