--- a/resources/assets/scss/components/_modals.scss
+++ b/resources/assets/scss/components/_modals.scss
@@ -57,3 +57,50 @@
         }
     }
 }
+
+.membership-card-modal {
+    .modal-dialog {
+        /* width: 70%; */
+        max-width: 70%;
+        border-radius: 0;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        .modal-body {
+            .container {
+                padding: 0;
+                width: 100%;
+                margin: 0;
+                max-width: 100%;
+            }
+            img {
+                width: 100%;
+            }
+        }
+        .modal-content {
+            border-radius: 0;
+            // height: 800px;
+            // overflow-y: scroll;
+        }
+        button.close {
+            position: absolute;
+            background: $color-secondary;
+            right: 0 !important;
+            top: 0;
+            padding: 5px 10px !important;
+            margin: 0 !important;
+            color: $color-white;
+            border-radius: 0;
+            z-index: 9;
+            opacity: 1;
+        }
+        .modal-header {
+            padding: 2px 15px !important;
+            h5 {
+                font-weight: bold;
+            }
+        }
+    }
+}
