--- a/resources/assets/scss/components/_header.scss
+++ b/resources/assets/scss/components/_header.scss
@@ -123,9 +123,16 @@ header {
                             }
                         }
                     }
+                    &:nth-child(4) {
+                        .dropdown-menu {
+                            // left: -70px;
+                            left: -135%;
+                        }
+                    }
                     &:last-child {
                         .dropdown-menu {
-                            left: -70px;
+                            // left: -70px;
+                            left: -180%;
                         }
                     }
                 }
