--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18253,8 +18253,11 @@ header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu ul li a {
 header .main-nagivation-desktop .navbar-bar ul > li .dropdown-menu ul li a:hover {
   background: #841523;
 }
+header .main-nagivation-desktop .navbar-bar ul > li:nth-child(4) .dropdown-menu {
+  left: -135%;
+}
 header .main-nagivation-desktop .navbar-bar ul > li:last-child .dropdown-menu {
-  left: -70px;
+  left: -180%;
 }
 header .main-nagivation-desktop .navbar-bar .mega-menu {
   width: 400px;
@@ -20792,6 +20795,8 @@ ul.bullet-style li h6 {
   height: 21px;
   background: url("../images/sprite.png") no-repeat;
   background-position: -240px -8px;
+  -webkit-transform: rotate(100deg);
+          transform: rotate(100deg);
 }
 .contact-details__item i.mail {
   display: inline-block;
@@ -21014,6 +21019,17 @@ ul.bullet-style li h6 {
 }
 .event-details__image img {
   width: 100%;
+}
+.event-details__contacts {
+  margin-top: 40px;
+}
+.event-details__contacts p {
+  margin: 0 !important;
+  font-weight: 600;
+  font-size: 1em;
+}
+.event-details__contacts i {
+  margin-right: 10px;
 }
 .event-details__description {
   font-size: 1em;
@@ -22787,12 +22803,20 @@ section.page--media .search-member-directory {
   border-radius: 5px;
   -moz-border-radius: 5px;
 }
+.image-thumbnail-hover__image:hover .image-thumbnail-hover__overlay {
+  opacity: 1;
+  visibility: visible;
+}
+.image-thumbnail-hover__image:hover .image-thumbnail-hover__overlay a {
+  color: #fff;
+}
 .image-thumbnail-hover__overlay {
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  transition: all 0.4s ease;
   opacity: 0;
   visibility: hidden;
 }
