new update on QAR

--- a/resources/assets/scss/components/_chapter-elements.scss
+++ b/resources/assets/scss/components/_chapter-elements.scss
@@ -665,6 +665,11 @@ img {
             margin: 0;
             padding: 0;
         }
+        h2 {
+            font-size: 2.3em;
+            margin-bottom: 10px;
+            display: block;
+        }
     }
     &__message {
         height: 100%;
