--- a/public/css/app.css
+++ b/public/css/app.css
@@ -23877,6 +23877,11 @@ img.img-dropshadow {
   margin: 0;
   padding: 0;
 }
+.login-section__form h2 {
+  font-size: 2.3em;
+  margin-bottom: 10px;
+  display: block;
+}
 .login-section__message {
   height: 100%;
   display: flex !important;
