--- a/resources/assets/scss/components/_modals.scss
+++ b/resources/assets/scss/components/_modals.scss
@@ -44,6 +44,7 @@
             width: calc(100%/2);
             display: block;
             height: 100px;
+            cursor: pointer;
         }
     }
     &__big-image {
